# impact-player

./: Cargo.toml  README.md
client/: components.json  package.json
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/app/api/auth/[...nextauth]/: route.ts
client/src/app/signin/: page.tsx
client/src/app/trade/[pair]/: ClientTradingPage.tsx  page.tsx
client/src/components/: icons.tsx
client/src/components/home/: FeatureSections.tsx  HeroCarousel.tsx  PriceTable.tsx
client/src/components/layout/: footer.tsx  layout.tsx  navbar.tsx
client/src/components/market/: MarketIcon.tsx  MarketsTable.tsx  PaginationControl.tsx
client/src/components/trade/: BottomTable.tsx  Orderbook.tsx  SwapUI.tsx  TradeHeader.tsx
client/src/components/trade/chart/: ChartArea.tsx  ChartControl.tsx
client/src/components/trade/chat/: ChatArea.tsx
client/src/components/trade/depth/: AskTable.tsx  BidTable.tsx  Depth.tsx  NoTable.tsx  YesTable.tsx
client/src/components/ui/: SparklineChart.tsx  button.tsx
client/src/utils/: MessageStore.ts  SignalingManager.ts  chartManager.ts  httpClient.ts  mockMarkets.ts  types.ts
client/src/utils/store/: chartStore.ts
db-processor/: .env  Cargo.toml
db-processor/migrations/: 20250510084242_init.down.sql  20250510084242_init.up.sql
db-processor/src/: main.rs
db-processor/src/services/: mod.rs  redis_manager.rs  timescale_dynamic_manager.rs
db-processor/src/types/: message_from_engine.rs  mod.rs
http-server/: .env  .env.example  Cargo.toml  Dockerfile  README.md
http-server/.sqlx/: query-82feadd8402203d4a7ee1d87bce18d0ed53cc718211e1ab04fc1a005c3810c8d.json  query-f3f58600e971f1be6cbe206bba24f77769f54c6230e28f5b3dc719b869d9cb3f.json
http-server/migrations/: 20250421212327_init.up.sql  20250513190718_add_market.down.sql  20250513190718_add_market.up.sql
http-server/src/: config.rs  main.rs  state.rs
http-server/src/models/: message_from_engine.rs  message_to_engine.rs  mod.rs  user_model.rs
http-server/src/routes/: depth.rs  klines.rs  market.rs  mod.rs  order.rs  ticker.rs  trades.rs  user.rs
http-server/src/services/: redis_manager.rs
orderbook-manager/: Cargo.toml
orderbook-manager/src/: constant.rs  main.rs
orderbook-manager/src/models/: message_from_api.rs  message_to_api.rs  message_to_db.rs  mod.rs  orderbook_worker_message.rs
orderbook-manager/src/services/: mod.rs  redis_manager.rs
orderbook-manager/src/trade/: engine.rs  mod.rs  orderbook.rs  orderbook_worker.rs
wss/: Cargo.toml
wss/src/: handlers.rs  main.rs  models.rs  redis_manager.rs  state.rs  websocket.rs
wss/src/types/: mod.rs
