[workspace]
members = ["http-server", "orderbook-manager"]

resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Tarun Kumar"]

[workspace.dependencies]
# HTTP Server dependecies
axum = "0.8.1"
dotenv = "0.15.0"
redis = { version = "0.28.2", features = ["async-std-comp"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
