[package]
name = "http-server"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0.98"
axum = { workspace = true, features = ["macros"] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenv.workspace = true
redis.workspace = true
rust_decimal = "1.37.1"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx = { version = "0.8.5", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "chrono",
    "time",
] }
time = "0.3.41"
tokio = { workspace = true, features = ["full"] }
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { version = "1.16.0", features = ["v4"] }
