[package]
name = "orderbook-manager"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0.98"
redis.workspace = true
rust_decimal = "1.37.1"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
