[package]
name = "orderbook-manager"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
lazy_static = "1.5.0"
redis.workspace = true
rust_decimal = "1.37.1"
rust_decimal_macros = "1.37.1"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { version = "1.16.0", features = ["v4"] }
